# ghl

./: .gitignore  README.md  pipeline.md
hub/ph-api/: .env.base  .env.template  .git-blame-ignore-revs  .gitignore  .platform.app.yaml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  auth.py  db.py  docker-compose.yml  env.py  kafka_consumer.py  llm.py  memcache.py  models.py  pyproject.toml  run_migration.sh  server.py  server_test.py  setup_project.py
hub/ph-api/.upsun/local/: project.yaml
hub/ph-api/alembic/: README  env.py
hub/ph-api/alembic/versions/: 0e6f41122bee_initial.py  16280adb7033_sample_datasets.py  64c4877625e5_add_schema_type.py  65ade074ef17_add_project_name_org_unique_constraint.py  786d23d94b30_dcs_and_projects.py  7bd1b5ea4f00_batch_pointer.py  82fd6503d5be_add_one_to_many_orgs.py  8e7eb07d3fbb_initial_verison.py  a99dbe5cdfda_add_ecg_results_table.py  ee10431c4992_add_batch_processing_status.py
hub/ph-api/consumers/: __init__.py  file_producer.py  kafka_config.py  notification_consumer.py  thumbnail_consumer.py  thumbnail_consumer_test.py
hub/ph-api/consumers/evals/: __init__.py  csv_consumer.py  dicom_consumer.py  evals_test.py  json_consumer.py  mp4_consumer.py  npz_consumer.py
hub/ph-api/consumers/thumbnails/: __init__.py  csv_thumbnail.py  dicom_thumbnail.py  mp4_thumbnail.py  npz_thumbnail.py  thumbnail_processor.py  thumbnails_test.py
hub/ph-api/docs/: authentication.md  database.md  file_uploads.md  kafka.md  llm.md  project_structure.md  scheduler.md  services.md
hub/ph-api/middleware/: __init__.py  auth.py  file_upload.py
hub/ph-api/pgadmin4/: pgpassfile  servers.json
hub/ph-api/samples/: 200_synthetic_patients.csv  500_synthetic_patients.csv  alivecor-3.json  alivecor-6.json  ecg_timeseries_1.npz  ecg_timeseries_2.npz  echo3.dcm  sanket_ecg.xlsx
hub/ph-api/services/: batch_processing.py  batch_processor.py  batches.py  batches_test.py  data_quality.py  datasets.py  dicom.py  files.py  files_test.py  items.py  mobile_ecg.py  mobile_ecg_test.py  notifications.py  organizations.py  organizations_test.py  projects.py  projects_test.py  samples.py  samples_test.py  storage.py  synthetic_datasets.py  users.py  users_test.py  webhooks.py
hub/ph-api/services/catalog/: __init__.py
hub/ph-api/services/catalog/checks/: __init__.py  catalog.py  checks_test.py
hub/ph-api/services/catalog/mappings/: __init__.py  catalog.py  llm_mapping.py  mappings_test.py
hub/ph-api/services/catalog/models/: __init__.py  catalog.py  (+2 more)
hub/ph-api/static/: index.html
hub/ph-api/tasks/: __init__.py  config.py  main.py  scheduler.py
hub/ph-api/tests/: README.md  conftest.py  test_factory.py  test_utils.py
hub/ph-api/utilities/: change-password  change_password.py  create-organization  create-user  create_organization.py  create_user.py  initialize-checks  initialize_checks.py
models.dino/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
models.dino/configs/: finetune.yaml  pretrain.yaml
models.dino/data/: __init__.py  augmentations.py  custom_dataset.py  ptbxl.py  test_data.py
models.dino/docs/: api.md  getting_started.md  getting_started.md.md  metadata_schema.md  ml_model.md
models.dino/models/: __init__.py  asymmetric_dino.py  ecg_transformer.py  test_models.py
models.dino/scripts/: download_ptbxl.sh  setup_environment.sh  train.sh
models.dino/tests/integration/: test_pipeline.py
models.dino/tests/unit/: test_data.py  test_models.py
models.dino/train/: train.py
models.dino/utils/: __init__.py  config.py  logger.py  metrics.py  test_utils.py
models.echoquality/: .gitattributes  .gitignore  Dockerfile  Dockerfile.jupyter  EchoPrime_qc.py  EchoQualityDemo.ipynb  LICENSE  Makefile  README.md  debug_scaling.py  debug_scaling_interactive.py  debug_scaling_specialized.py  debug_scaling_visual.py  echo_data_augmentation.py  echo_model_evaluation.py  pyproject.toml  requirements.txt  run_jupyter.py  train_quality_model.py  video_quality_model.pt
models.echoquality/data/: __init__.py
models.echoquality/docs/: COMMAND_REFERENCE.md  DEBUG_TOOLS.md  FILE_STRUCTURE.md  GETTING_STARTED.md  PIPELINE.md  QUALITY_SCORING.md  README.md  TRAINING.md  TRAINING_DATASET_README.md  TRAINING_WORKFLOW.md  TROUBLESHOOTING.md  VISUALIZATION_README.md  inference_pipeline.md  quick_reference.md
models.echoquality/inference/: EchoPrime_qc.py  EchoQualityDemo.ipynb  __init__.py  inference.py
models.echoquality/notebooks/: EchoPrime-Video-Quality-Demo.ipynb  EchoQuality-Interactive-Analysis.ipynb
models.echoquality/preprocessors/: __init__.py  image_scaling.py  ultrasound_masking.py
models.echoquality/results/: __init__.py
models.echoquality/scripts/: debug_scaling_visual.py  prepare_training_data.py  visualize_results.py
models.echoquality/test_runs/: 1.md
models.echoquality/tools/: README.md  __init__.py  debug_scaling.py  debug_scaling_interactive.py  debug_scaling_specialized.py  debug_scaling_visual.py
models.echoquality/training/: TRAINING.md  __init__.py  example_training.py  train_quality_model.py
models.echoquality/training_data/: echo_annotations.csv
models.echoquality/training_data_enhanced/: dataset_analysis.json  echo_annotations_enhanced.csv
tools/: README.md  pyproject.toml  samples.py
(+234 files in other folders)
