[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "asymmetric-dino-ecg"
version = "0.1.0"
description = "Asymmetric DINO V2 for ECG Analysis"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/yourusername/asymmetric-dino-ecg"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [
    { include = "models" },
    { include = "data" },
    { include = "utils" },
    { include = "train" }
]
package-mode = false  # Disable package mode to use Poetry only for dependency management

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
torch = ">=1.10.0"
torchvision = ">=0.11.0"
numpy = ">=1.21.0"
pandas = ">=1.3.0"
scipy = ">=1.7.0"
pyyaml = ">=5.4.1"
tensorboard = ">=2.7.0"
tqdm = ">=4.62.0"
scikit-learn = ">=1.0.0"
matplotlib = ">=3.5.0"
wfdb = "^4.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pylint = "^2.17.0"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88
