[project]
name = "echoquality"
version = "0.1.0"
description = ""
authors = [
    {name = "Patrick Nikoletich",email = "patrick@isolated.dev"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "numpy",
    "tqdm",
    "opencv-python",
    "pydicom",
    "torchvision",
    "mlflow (>=2.22.0,<3.0.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
