[project]
name = "echoquality"
version = "0.1.0"
description = "A deep learning tool for assessing the quality of echocardiogram videos"
authors = [
    {name = "Patrick Nikoletich", email = "patrick@isolated.dev"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
    "tqdm>=4.60.0",
    "opencv-python>=4.5.0",
    "pydicom>=2.2.0",
    "torchvision>=0.15.0",
    "mlflow>=2.22.0,<3.0.0",
    "matplotlib>=3.5.0",
    "scikit-learn>=1.0.0",
    "pandas>=1.3.0",
    "seaborn>=0.11.0",
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.10.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "jupyter>=1.0.0",
    "ipywidgets>=7.6.0",
    "plotly>=5.3.0"
]
package-mode = false

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
